# PromptZip

./: .coverage  .dockerignore  .env.example  .gitignore  AGENTS.md  DESIGN.md  Dockerfile  README.md  __init__.py  client.py  demo.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
.github/workflows/: sync_hf.yml
prompt_zip_env/: README.md  __init__.py  client.py  openenv.yaml  pyproject.toml
prompt_zip_env/server/: app.py  prompt_zip_environment.py  requirements.txt  test_prompt_zip_env.py
server/: Dockerfile  app.py  prompt_zip_environment.py  requirements.txt  test_app.py  test_coverage.py  test_prompt_zip_env.py
