[project]
name = "prompt_zip_env"
version = "0.1.0"
description = "RL environment for compressing LLM prompts via elide/rephrase/preserve actions"
requires-python = ">=3.10"

dependencies = [
    "openenv-core>=0.2.0",
    "groq",
    "fastapi",
    "uvicorn[standard]",
    "openai>=1.0.0",
    "python-dotenv",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

# Flat layout: models.py, client.py at root; server/ subpackage
[tool.setuptools]
py-modules = ["models", "client"]

[tool.setuptools.packages.find]
where = ["."]
include = ["server*"]
